Update skills and projects

--- a/index.html
+++ b/index.html
@@ -94,19 +94,23 @@
   <ul>
     <li><u>Operating Systems</u> - MacOS, Windows, Linux (Ubuntu)</li>
     <li><u>Programming Languages</u> - Python, Javascript, HTML, CSS, Solidity (learning)</li>
-    <li><u>Software</u> - Google Suite, MS Office, Atlassian, Trello, Git/Github</li>
+    <li><u>Software</u> - Google Suite, MS Office, Atlassian, Trello, Git/Github, AWS, Selenium, SolidWorks, Ansys</li>
+    <li><u>Other</u> - Raspeberry Pi</li>
   </ul>
 
   <h3 id="current-projects">Current Projects</h3>
   <ul>
-    <li><u>Convenient Digital</u> - A working group dedicated to building open source software, tools, and resources. [<a href="https://github.com/convenientdigital">Github</a>, <a href="https://convenientdigital.com/">Website</a>]</li>
+    <li><u>Convenient Digital</u> - A working group dedicated to building open source software, tools, and resources. [<!--<a href="https://github.com/convenientdigital">Github</a>, --><a href="https://convenientdigital.com/">Website</a>]</li>
   </ul>
 
   <h3 id="past-projects">Past Projects</h3>
   <ul>
-    <li><u>Blocknet API Documentation</u> - An API usage and reference guide for the Blocknet Protocol. [<a href="https://github.com/hanniabu/api-docs">Github</a>, <a href="https://api.blocknet.co/">Website</a>]</li>
-    <li><u>Blocknet Documentation</u> - A documentation and knowledgebase for the Blocknet Protocol. [<a href="https://github.com/hanniabu/documentation">Github</a>, <a href="https://docs.blocknet.co/">Website</a>]</li>
-    <li><u>Block DX Website</u> - A website for a decentralized exchange powered by the Blocknet Protocol. [<a href="https://github.com/hanniabu/blockdx-website">Github</a>, <a href="http://blockdx.com/">Website</a>]</li>
+    <li><u>Blocknet API Documentation</u> - An API usage and reference guide for the Blocknet Protocol. [<a href="https://github.com/hanniabu/api-docs/commits?author=hanniabu">Github</a>, <a href="https://api.blocknet.co/">Website</a>]</li>
+    <li><u>Blocknet Documentation</u> - A documentation and knowledgebase for the Blocknet Protocol. [<a href="https://github.com/hanniabu/documentation/commits?author=hanniabu">Github</a>, <a href="https://docs.blocknet.co/">Website</a>]</li>
+    <li><u>Block DX Website</u> - A website for a decentralized exchange powered by the Blocknet Protocol. [<a href="https://github.com/hanniabu/blockdx-website/commits?author=hanniabu">Github</a>, <a href="http://blockdx.com/">Website</a>]</li>
+    <li><u>Blocknet Interchain Configs</u> - Configuration files for blockchains integrated with the Blocknet Protocol. [<a href="https://github.com/blocknetdx/blockchain-configuration-files/commits?author=hanniabu">Github</a>]</li>
+    <li><u>Block DX</u> - A UTXO-based fully decentralized P2P exchange powered by the Blocknet Protocol. [<a href="https://github.com/blocknetdx/block-dx/commits?author=hanniabu">Github</a>]</li>
+    <li><u>Blocknet</u> - A blockchain interoperability protocol. [<a href="https://github.com/blocknetdx/blocknet/commits?author=hanniabu">Github</a>]</li>
   </ul>
 
 
